--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(zerod C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(zerod main.c server.c server.h logging.c logging.h panic.h)
+add_executable(zerod main.c server.c server.h logging.c logging.h panic.h peer.c peer.h)
