socket: move socket utility functions to new file
Signed-off-by: Ron Shabi <ron@ronsh.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(zerod
         main.c
         server.c
         server.h
+        socket.c
+        socket.h
         logging.c
         logging.h
         panic.h
